# GoodbyeNetworkSecurityProgramming

./: .gitignore  README.md  package.json
assets/: 1.cert.pem  1.csr.pem  1.private.pem  2.cert.pem  2.csr.pem  2.private.pem  README.md  ca.cert.pem  ca.cert.srl  ca.private.pem
config/: webpack.config.js
public/: index.html
src/: index.jsx
src/components/: CertsDialog.jsx  Dialog.jsx  Frame.jsx  Messenger.jsx  Notifier.jsx  PasswordDialog.jsx
src/cpp/: .gitignore  CMakeLists.txt
src/cpp/src/: client.cc  client.h  main.cc  server.cc  server.h  ssl.cc  ssl.h
src/electron/: main.js
src/stores/: index.js
src/styles/: chatRoom.js  global.js  messenger.js
src/utils/: addon.js  aes.js  classNames.js  sha.js
src/views/: App.jsx  ChatRoom.jsx
